<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addEditScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <EditText
            android:id="@+id/titleEditText"
            style="@style/ContactLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:hint="@string/hint_title"
            android:imeOptions="actionNext" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/yearEditText"
            style="@style/ContactLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:hint="@string/hint_year"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <EditText
            android:id="@+id/directorEditText"
            style="@style/ContactLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:ems="10"
            android:hint="@string/hint_director" />

        <Button
            android:id="@+id/saveMovieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_save_movie" />

    </GridLayout>

</ScrollView>
