<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/titleLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="@string/label_title" />

        <TextView
            android:id="@+id/titleTextView"
            style="@style/ContactTextView"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="0"
            android:text="TextView" />

        <TextView
            android:id="@+id/yearLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="@string/label_year" />

        <TextView
            android:id="@+id/yearTextView"
            style="@style/ContactTextView"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="1"
            android:text="TextView" />

        <TextView
            android:id="@+id/directorLabelTextView"
            style="@style/ContactLabelTextView"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="@string/label_director" />

        <TextView
            android:id="@+id/directorTextView"
            style="@style/ContactTextView"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_row="2"
            android:text="TextView" />

    </GridLayout>

</ScrollView>
